fix: z-index property on sidebar

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@ nav {
   height: 6rem;
   display: flex;
   justify-content: center;
+  z-index: 10;
 }
 
 .nav-container {
@@ -295,6 +296,7 @@ footer {
   height: 100%;
   width: 49.5%;
   max-width: 35rem;
+  z-index: 1;
 }
 
 .menuItem > a:hover {
